Criação do cadastro de gastos com água.

--- a/EnerSave/EnerSave/Views/Home/Index.cshtml
+++ b/EnerSave/EnerSave/Views/Home/Index.cshtml
@@ -3,16 +3,33 @@
 }
 
 <style>
-body { background: url('https://img.freepik.com/vetores-gratis/conceito-de-design-moderno-de-ilustracao-vetorial-de-fundo-abstrato-tecnologia-de-cor-branca_29865-4088.jpg?w=2000') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+    body { background: url('https://img.freepik.com/vetores-gratis/conceito-de-design-moderno-de-ilustracao-vetorial-de-fundo-abstrato-tecnologia-de-cor-branca_29865-4088.jpg?w=2000') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+    h3 { color: #5a77e3; }
 </style>
 
-<h1><font color="black">EnerSave - Controle de Gastos e Descarte de Lixo </font> </h1>
-<span style="color: black;";">
-    Desenvolvido por:<br><br /> 
-</span>
-<span style="color: black;" ;">
-    Richard Gehlen Castilhos
-</span>
+<h2><font color="gray" face="Verdana">EnerSave - Controle de Gastos e Descarte de Lixo </font> </h2>
+<br />
+<h3><font face="Verdana">História</font></h3>
+<hr />
+<h7><font color="black">O sistema de controle de gastos e descarte de lixo EnerSave, foi criado em 2022, originado na disciplina de projeto empreendedor na faculdade FTEC em Caxias do Sul.</font> </h7>
+<!-- <img src="https://www.ftec.com.br/static/front_end/_images/uniftec/4.jpg" weigth=500 height=500> -->
+<br />
+<br />
+<h3><font face="Verdana">Objetivo</font></h3>
+<hr />
+<h7><font color="black">O objetivo do EnerSave é proporcionar aos usuários uma maneira de controlar seus gastos anuais e o consumo de lixo, através de gráficos/indicadores para uma análise mais detalhada.</font> </h7>
+<h7><font color="black">O sistema conta com a funcionalidade de cadastrar os valores gastos e o consumo, seja de água ou energia.</font> </h7>
+<br />
+<br />
+<h3><font face="Verdana">Contato</font></h3>
+<hr />
+<h7><font color="black">Para maiores informações, pode-se contatar a área comercial do EnerSave que estão prontos para esclarecer todas suas dúvidas ;).</font> </h7>
+<br />
+<br />
+<h7><p><font color="black">Email: enersavebrasil@outlook.com.br</font></p>
+    <p><font color="black">Telefone: (54) 3214-5475</font></p>
+    <p><font color="black">Endereço: Caxias do Sul - Rua José Jaconi 2913 </p>
+</h7>
 
 
 
