--- a/EnerSave/EnerSave/Views/Shared/_Layout.cshtml
+++ b/EnerSave/EnerSave/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -30,10 +31,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home Page</a></li>
-                    <li><a asp-area="" asp-controller="TgastosAgua" asp-action="">Gastos Àgua</a></li>
-                    <li><a asp-area="" asp-controller="TgastosEnergia" asp-action="">Gastos Energia</a></li>
-                    <li><a asp-area="" asp-controller="TdescarteLixo" asp-action="">Descarte de Lixo</a></li>
+                    <li><a asp-area="" asp-controller="TgastosAgua" asp-action="">Gastos Água</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="">Gastos Energia</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="">Descarte Lixo</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="">Usuários</a></li>
                 </ul>
             </div>
         </div>
