--- a/EnerSave/EnerSave/Views/Shared/_Layout.cshtml
+++ b/EnerSave/EnerSave/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">EnerSave</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><img src="~/images/logo.png"/></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -46,10 +46,10 @@
         @RenderBody()
         <hr />
         <style>
-        body { background: url('https://img.freepik.com/vetores-gratis/conceito-de-design-moderno-de-ilustracao-vetorial-de-fundo-abstrato-tecnologia-de-cor-branca_29865-4088.jpg?w=2000') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+        body { background-color: #F8FCF6 }
         </style>
         <footer >
-            <p><font color="black">&copy; 2022 - EnerSave - enersavebrasil@outlook.br</font></p>
+            <h7>&copy; 2022 - EnerSave - enersavebrasil@outlook.br</h7>
         </footer>
     </div>
 
