--- a/EnerSave/EnerSave/Views/TgastosAgua/Edit.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosAgua/Edit.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2><font color="gray">Atualização do gasto de água</h2>
-<h5><font color="gray">Informe os dados necessários abaixo para efetuar a atualização dos dados.</h5>
+<h2>Atualização do gasto de água</h2>
+<h5>Informe os dados necessários abaixo para efetuar a atualização dos dados.</h5>
 
 <hr />
 <div class="row">
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" style="color: blue;">Voltar</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
