--- a/EnerSave/EnerSave/Views/TgastosAgua/Create.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosAgua/Create.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h2><font color="gray">Cadastro de Gastos de Água</h2>
-<h5><font color="black">Informe abaixo os dados necessários para o registro do gasto de água no período.</h5>
+<h2>Cadastro de Gastos de Água</h2>
+<h5>Informe abaixo os dados necessários para o registro do gasto de água no período.</h5>
 
 <hr />
 <div class="row">
@@ -35,7 +35,7 @@
 </div>
 
 <div>
-    <a asp-action="Index" style="color: blue;">Voltar</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
