--- a/EnerSave/EnerSave/Views/TgastosAgua/Index.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosAgua/Index.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h2><font color="gray">Gastos de Água</h2>
-<h5><font color="gray">Abaixo são exibidos os gastos com água cadastrados.</h5>
+<h2>Gastos de Água</h2>
+<h5>Abaixo são exibidos os gastos com água cadastrados.</h5>
 <br />
 
 <p>
-    <a asp-action="Create" style="color: blue;">
-       <input type="submit" style="background-color: dodgerblue; color: white;" value="Novo Gasto de Água" class="btn btn-default">
+    <a asp-action="Create">
+       <input type="submit" value="Novo Gasto de Água" class="btn btn-default">
     </a>
 </p>
 <table class="table">
@@ -42,9 +42,21 @@
                     @Html.DisplayFor(modelItem => item.UsuarioId)
                 </td>
                 <td>
-                    <a asp-action="Edit" style="color: blue;" asp-route-id="@item.Id">Alterar</a> |
-                    <a asp-action="Details" style="color: blue;" asp-route-id="@item.Id">Detalhes</a> |
-                    <a asp-action="Delete" style="color: blue;" asp-route-id="@item.Id">Remover</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </button>
+                    </a>
+                    <a asp-action="Details" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        </button>
+                    </a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        </button>
+                    </a>
                 </td>
             </tr>
         }
