--- a/EnerSave/EnerSave/Views/TgastosAgua/Index.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosAgua/Index.cshtml
@@ -62,3 +62,9 @@
         }
     </tbody>
 </table>
+
+<a asp-action="Grafico">
+    <button type="button" class="btn btn-sm">
+        <span>Gráfico</span>
+    </button>
+</a>
