--- a/EnerSave/EnerSave/Views/TgastosEnergia/Index.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosEnergia/Index.cshtml
@@ -68,3 +68,15 @@
         }
     </tbody>
 </table>
+
+<a asp-action="Grafico">
+    <button type="button" class="btn btn-sm">
+        <span>Gráfico KWH</span>
+    </button>
+</a>
+
+<a asp-action="Real">
+    <button type="button" class="btn btn-sm">
+        <span>Gráfico R$</span>
+    </button>
+</a>
