Commit das telas acessando BD e trocando para o Pomelo.EntityFrameworkCore.MySql para acessar o banco pq existe um bug na classe padrão do Entity

--- a/EnerSave/EnerSave/Views/Home/Index.cshtml
+++ b/EnerSave/EnerSave/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model string
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -28,4 +29,11 @@
 
 
 
-
+<script>
+    XMLHttpRequest.prototype.open = (function (open) {
+        return function (method, url, async) {
+            open.apply(this, arguments);
+            this.setRequestHeader('token', '@Model');
+        };
+    })(XMLHttpRequest.prototype.open);
+</script>
