--- a/EnerSave/EnerSave/Views/Shared/_Layout.cshtml
+++ b/EnerSave/EnerSave/Views/Shared/_Layout.cshtml
@@ -8,7 +8,8 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
-        
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -27,16 +28,25 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><img src="~/images/logo.png"/></a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><img src="~/images/logo.png" /></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="TgastosAgua" asp-action="">Gastos Água</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="">Gastos Energia</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="">Descarte Lixo</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="">Usuários</a></li>
+                    @if (EnerSave.Dominio.LoginSingleton.Instance.Logado == true)
+                    {
+                        <li><a asp-area="" asp-controller="TgastosAgua" asp-action="">Gastos Água</a></li>
+                        <li><a asp-area="" asp-controller="TgastosEnergia" asp-action="">Gastos Energia</a></li>
+                        <li><a asp-area="" asp-controller="TdescarteLixo" asp-action="">Descarte Lixo</a></li>
+                        <li><a asp-area="" asp-controller="Login" asp-action="Logout">Logout</a></li>
+                    }
+                    else
+                    {
+                        <li><a asp-area="" asp-controller="CriarConta" asp-action="">Criar Conta</a></li>
+                        <li><a asp-area="" asp-controller="Login" asp-action="">Login</a></li>
+                    }
                 </ul>
             </div>
+
         </div>
     </nav>
 
@@ -46,9 +56,11 @@
         @RenderBody()
         <hr />
         <style>
-        body { background-color: #F8FCF6 }
+            body {
+                background-color: #F8FCF6
+            }
         </style>
-        <footer >
+        <footer>
             <h7>&copy; 2022 - EnerSave - enersavebrasil@outlook.br</h7>
         </footer>
     </div>
@@ -57,6 +69,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
