--- a/EnerSave/EnerSave/Views/TgastosAgua/Create.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosAgua/Create.cshtml
@@ -14,17 +14,18 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="MetrosCubicos" class="control-label">Metros Cúbicos (m3)</label>
-                <input asp-for="MetrosCubicos" class="form-control" />
+                <input asp-for="MetrosCubicos" type="number" class="form-control" />
                 <span asp-validation-for="MetrosCubicos" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Periodo" class="control-label">Período</label>
-                <input asp-for="Periodo" class="form-control" />
+                <label asp-for="Periodo" class="control-label">Data da Leitura</label>
+                <input asp-for="Periodo" type="date" class="form-control" />
                 <span asp-validation-for="Periodo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UsuarioId" class="control-label">Usuário</label>
-                <input asp-for="UsuarioId" class="form-control" />
+                <input asp-for="UsuarioId" type="hidden" value="@EnerSave.Dominio.LoginSingleton.Instance.IdUsuario"  />
+                <input disabled class="form-control" value="@EnerSave.Dominio.LoginSingleton.Instance.Usuario"/>
                 <span asp-validation-for="UsuarioId" class="text-danger"></span>
             </div>
             <div class="form-group">
