--- a/EnerSave/EnerSave/Views/TgastosEnergia/Edit.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosEnergia/Edit.cshtml
@@ -1,10 +1,11 @@
-﻿@model ConsultasMVC.Entities.GastosAguaEntity
+﻿@model ConsultasMVC.Entities.GastosEnergiaEntity
+
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h2>Atualização do gasto de água</h2>
+<h2>Atualização do gasto de luz</h2>
 <h5>Informe os dados necessários abaixo para efetuar a atualização dos dados.</h5>
 
 <hr />
@@ -14,9 +15,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="MetrosCubicos" class="control-label">Metros Cúbicos (m3)</label>
-                <input asp-for="MetrosCubicos" type="number" class="form-control" />
-                <span asp-validation-for="MetrosCubicos" class="text-danger"></span>
+                <label asp-for="Kwh" class="control-label"> Consumo(kWh)</label>
+                <input asp-for="Kwh" type="number" class="form-control" />
+                <span asp-validation-for="Kwh" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Valor" class="control-label"> Valor</label>
+                <input asp-for="Valor" type="number" class="form-control" />
+                <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Periodo" class="control-label">Período</label>
