--- a/EnerSave/EnerSave/Views/TgastosAgua/Details.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosAgua/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConsultasMVC.dbenersave.TgastosAgua
+﻿@model ConsultasMVC.Entities.GastosAguaEntity
 
 @{
     ViewData["Title"] = "Details";
