--- a/EnerSave/EnerSave/Views/TdescarteLixo/Create.cshtml
+++ b/EnerSave/EnerSave/Views/TdescarteLixo/Create.cshtml
@@ -13,52 +13,61 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Peso" class="control-label">Peso(KG)</label>
-                <input asp-for="Peso" class="form-control" />
+                <label asp-for="Peso" class="control-label"> Peso total (Kg):</label>
+                <input asp-for="Peso" type="number" required class="form-control"  />
                 <span asp-validation-for="Peso" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Reciclavel" class="control-label">Reciclável</label>
-                @Html.RadioButtonFor(Models => Models.Reciclavel, 1)
-                <span>Sim</span>
 
-                @Html.RadioButtonFor(Models => Models.Reciclavel, 0)
-                <span>Não</span>
+            <div class="form-group">
+                <label asp-for="Organico" class="control-label"> Orgânico</label>
+                <input asp-for="Organico" type="checkbox" class="form-control" />
+                <span asp-validation-for="Organico" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Organico" class="control-label">Orgânico</label>
-                @Html.RadioButtonFor(Models => Models.Organico, 1)
-                <span>Sim</span>
-
-                @Html.RadioButtonFor(Models => Models.Organico, 0)
-                <span>Não</span>
+                <label asp-for="Reciclavel" class="control-label"> Seletivo</label>
+                <input asp-for="Reciclavel" type="checkbox" class="form-control" />
+                <span asp-validation-for="Reciclavel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Eletronico" class="control-label">Eletrônico</label>
-                @Html.RadioButtonFor(Models => Models.Eletronico, 1)
-                <span>Sim</span>
-
-                @Html.RadioButtonFor(Models => Models.Eletronico, 0)
-                <span>Não</span>
+                <label asp-for="Eletronico" class="control-label"> Eletrônico</label>
+                <input asp-for="Eletronico" type="checkbox" class="form-control checkbox" />
+                <span asp-validation-for="Eletronico" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DescricaoLixo" class="control-label">Descricao do Lixo</label>
-                <input asp-for="DescricaoLixo" class="form-control" />
-                <span asp-validation-for="DescricaoLixo" class="text-danger"></span>
+                <label asp-for="Observacao" class="control-label"> Observação</label>
+                <input asp-for="Observacao" type="text" class="form-control" />
+                <span asp-validation-for="Eletronico" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Periodo" class="control-label">Período</label>
-                <input asp-for="Periodo" class="form-control" />
+                <label asp-for="Periodo" class="control-label">Mês do descarte:</label>
+                <input asp-for="Periodo" type="date" class="form-control"  required/>
                 <span asp-validation-for="Periodo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UsuarioId" class="control-label"></label>
+                <label asp-for="UsuarioId" class="control-labels">Usuário</label>
                 <select asp-for="UsuarioId" class="form-control" asp-items="ViewBag.UsuarioId"></select>
+                <span asp-validation-for="UsuarioId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Cadastrar" class="btn btn-default" />
             </div>
         </form>
+            
+         <style>
+            input:focus:invalid 
+           {
+                border: red 1px solid;
+            }
+
+            #Organico,#Reciclavel,#Eletronico{
+                width:15px;
+                height:15px;
+                float: right;
+                margin-right:250px;
+            }
+          
+        </style>
+
     </div>
 </div>
 
@@ -69,3 +78,8 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<script>
+    $(document).ready(function () {
+        $('.combo').select2();
+    });
+</script>
