--- a/EnerSave/EnerSave/Views/TdescarteLixo/Delete.cshtml
+++ b/EnerSave/EnerSave/Views/TdescarteLixo/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConsultasMVC.dbenersave.TdescarteLixo
+﻿@model ConsultasMVC.Entities.DescarteLixoEntity
 
 @{
     ViewData["Title"] = "Delete";
@@ -11,34 +11,16 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Peso(KG):
+            Peso total orgânico (Kg)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Peso)
         </dd>
-        <dt>
-            Reciclável:
+         <dt>
+            Peso total seletivo (Kg)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Reciclavel)
-        </dd>
-        <dt>
-            Orgânico:
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Organico)
-        </dd>
-        <dt>
-            Eletrônico:
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Eletronico)
-        </dd>
-        <dt>
-            Descrição do Lixo:
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DescricaoLixo)
+            @Html.DisplayFor(model => model.Peso)
         </dd>
         <dt>
             Período:
