--- a/EnerSave/EnerSave/Views/TdescarteLixo/Edit.cshtml
+++ b/EnerSave/EnerSave/Views/TdescarteLixo/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model ConsultasMVC.dbenersave.TdescarteLixo
+﻿@model ConsultasMVC.Entities.DescarteLixoEntity
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h2>Atualização do Descarte de Lixo</h2>
+<h2>Atualização do descarte de Lixo</h2>
 <h5>Informe os dados necessários abaixo para efetuar a atualização dos dados.</h5>
 
 <hr />
@@ -14,37 +14,38 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Peso" class="control-label">Peso(KG)</label>
-                <input asp-for="Peso" class="form-control" />
+                <label asp-for="Peso" class="control-label"> Peso total (Kg):</label>
+                <input asp-for="Peso" type="number" class="form-control" />
                 <span asp-validation-for="Peso" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="Reciclavel" class="control-label">Reciclável</label>
-                <input asp-for="Reciclavel" class="form-control" />
-                <span asp-validation-for="Reciclavel" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Organico" class="control-label">Orgânico</label>
-                <input asp-for="Organico" class="form-control" />
+                <label asp-for="Organico" class="control-label"> Orgânico</label>
+                <input asp-for="Organico" type="checkbox" class="form-control" />
                 <span asp-validation-for="Organico" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Eletronico" class="control-label">Eletrônico</label>
-                <input asp-for="Eletronico" class="form-control" />
+                <label asp-for="Reciclavel" class="control-label"> Seletivo</label>
+                <input asp-for="Reciclavel" type="checkbox" class="form-control" />
+                <span asp-validation-for="Reciclavel" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Eletronico" class="control-label"> Eletrônico</label>
+                <input asp-for="Eletronico" type="checkbox" class="form-control" />
                 <span asp-validation-for="Eletronico" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DescricaoLixo" class="control-label">Descrição do Lixo</label>
-                <input asp-for="DescricaoLixo" class="form-control" />
-                <span asp-validation-for="DescricaoLixo" class="text-danger"></span>
+                <label asp-for="Observacao" class="control-label"> Observação</label>
+                <input asp-for="Observacao" type="text" class="form-control" />
+                <span asp-validation-for="Eletronico" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Periodo" class="control-label">Período</label>
-                <input asp-for="Periodo" class="form-control" />
+                <input asp-for="Periodo" type="date" class="form-control" />
                 <span asp-validation-for="Periodo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UsuarioId" class="control-label"></label>
+                <label asp-for="UsuarioId" class="control-label">Usuário</label>
                 <select asp-for="UsuarioId" class="form-control" asp-items="ViewBag.UsuarioId"></select>
                 <span asp-validation-for="UsuarioId" class="text-danger"></span>
             </div>
@@ -52,6 +53,19 @@
                 <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </form>
+
+        <style>
+            input:focus:invalid {
+                border: red 1px solid;
+            }
+
+            #Organico, #Reciclavel, #Eletronico {
+                width: 15px;
+                height: 15px;
+                float: right;
+                margin-right: 250px;
+            }
+        </style>
     </div>
 </div>
 
