--- a/EnerSave/EnerSave/Views/TdescarteLixo/Index.cshtml
+++ b/EnerSave/EnerSave/Views/TdescarteLixo/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ConsultasMVC.dbenersave.TdescarteLixo>
+﻿@model IEnumerable<ConsultasMVC.Entities.DescarteLixoEntity>
 
 @{
     ViewData["Title"] = "Index";
@@ -6,36 +6,35 @@
 
 <h2>Descarte de Lixo</h2>
 <h5>Abaixo são exibidos os descartes de lixo cadastrados.</h5>
+<hr />
+
 <br />
 
 <p>
     <a asp-action="Create">
-       <input type="submit" value="Novo Descarte de Lixo" class="btn btn-default">
+        <input type="submit" value="Novo Descarte de Lixo" class="btn btn-default">
     </a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                Peso(KG)
-            </th>
-            <th>
-                Reciclável
+                Peso total (Kg)
             </th>
             <th>
                 Orgânico
             </th>
             <th>
+                Seletivo
+            </th>
+            <th>
                 Eletrônico
             </th>
             <th>
-                Descrição do Lixo
+                Observação
             </th>
             <th>
-                Período
-            </th>
-            <th>
-                Usuário
+                Período do descarte
             </th>
             <th></th>
         </tr>
@@ -43,71 +42,67 @@
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Peso)
-                @if (item.Peso == 1)
-                {
-                    <span>Sim</span>
-                }
-            </td>
-            <td>
-                @if (item.Reciclavel == 1)
-                {
-                    <span>Sim</span>
-                }
-                else
-                {
-                    <span>Não</span>
-                }
-            </td>
-            <td>
-                @if (item.Organico == 1)
-                {
-                    <span>Sim</span>
-                }
-                else
-                {
-                    <span>Não</span>
-                }
-            </td>
-            <td>
-                @if (item.Eletronico == 1)
-                {
-                    <span>Sim</span>
-                }
-                else
-                {
-                    <span>Não</span>
-                }
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DescricaoLixo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Periodo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario.Nome)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">
-                    <button type="button" class="btn btn-sm">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </button>
-                </a>
-                <a asp-action="Details" asp-route-id="@item.Id">
-                    <button type="button" class="btn btn-sm">
-                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                    </button>
-                </a>
-                <a asp-action="Delete" asp-route-id="@item.Id">
-                    <button type="button" class="btn btn-sm">
-                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                    </button>
-                </a>
-            </td>
-        </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Peso)
+                </td>
+                <td>
+                    @{ if (item.Organico)
+                        {
+                            @:Sim
+                        }
+                        else
+                        {
+                            @:Não
+                        }
+                    }
+                </td>
+                <td>
+                    @{ if (item.Reciclavel)
+                        {
+                            @:Sim
+                        }
+                        else
+                        {
+                            @:Não
+                        }
+                    }
+                </td>
+                <td>
+                    @{ if (item.Eletronico)
+                        {
+                            @:Sim
+                        }
+                        else
+                        {
+                            @:Não
+                        }
+                    }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Periodo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Usuario.Nome)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </button>
+                    </a>
+                    <a asp-action="Details" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        </button>
+                    </a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        </button>
+                    </a>
+                </td>
+            </tr>
         }
     </tbody>
 </table>
