--- a/EnerSave/EnerSave/Views/TgastosAgua/Delete.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosAgua/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model ConsultasMVC.dbenersave.TgastosAgua
+﻿@model ConsultasMVC.Entities.GastosAguaEntity
+
 
 @{
     ViewData["Title"] = "Delete";
@@ -33,6 +34,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Excluir" class="btn btn-default" /> |
-        <a asp-action="Index" >Cancelar</a>
+        <a asp-action="Index">Cancelar</a>
     </form>
 </div>
