--- a/EnerSave/EnerSave/Views/TgastosEnergia/Create.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosEnergia/Create.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Cadastro de Gastos de Energia</h2>
-<h5>Informe abaixo os dados necessários para o registro do gasto de energia no período.</h5>
+<h2>Cadastro de Gastos de Luz</h2>
+<h5>Informe abaixo os dados necessários para o registro do gasto de luz no período.</h5>
 
 <hr />
 <div class="row">
@@ -13,28 +13,36 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Kilowatts" class="control-label">Kilowatts(kWh)</label>
-                <input asp-for="Kilowatts" class="form-control" />
-                <span asp-validation-for="Kilowatts" class="text-danger"></span>
+                <label asp-for="Kwh" class="control-label">Consumo(kWh)</label>
+                <input asp-for="Kwh" type="number" class="form-control" required />
+                <span asp-validation-for="Kwh" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Valor" class="control-label">Valor(R$)</label>
-                <input asp-for="Valor" class="form-control" />
+                <label asp-for="Valor" class="control-label">Valor</label>
+                <input asp-for="Valor" type="number" class="form-control" required />
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Periodo" class="control-label">Período</label>
-                <input asp-for="Periodo" class="form-control" />
+                <label asp-for="Periodo" class="control-label">Data da Leitura</label>
+                <input asp-for="Periodo" type="date" class="form-control" required/>
                 <span asp-validation-for="Periodo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UsuarioId" class="control-label"></label>
+                <label asp-for="UsuarioId" class="control-label">Usuário</label>
                 <select asp-for="UsuarioId" class="form-control" asp-items="ViewBag.UsuarioId"></select>
+                <span asp-validation-for="UsuarioId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Cadastrar" class="btn btn-default" />
             </div>
         </form>
+
+         <style>
+            input:focus:invalid 
+           {
+                border: red 1px solid;
+            }
+        </style>
     </div>
 </div>
 
