--- a/EnerSave/EnerSave/Views/TgastosEnergia/Delete.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosEnergia/Delete.cshtml
@@ -1,23 +1,24 @@
-﻿@model ConsultasMVC.dbenersave.TgastosEnergia
+﻿@model ConsultasMVC.Entities.GastosEnergiaEntity
+
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h2>Exclusão de Gastos de Energia</h2>
+<h2>Exclusão de Gastos de Luz</h2>
 
-<h4>Deseja realmente remover este gasto com energia? </h4>
+<h4>Deseja realmente remover este gasto com luz? </h4>
 <div>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Kilowatts(kWh):
+            Consumo(kWh)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Kilowatts)
+            @Html.DisplayFor(model => model.Kwh)
         </dd>
         <dt>
-            Valor (R$):
+            Valor
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Valor)
@@ -39,6 +40,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Excluir" class="btn btn-default" /> |
-        <a asp-action="Index" >Cancelar</a>
+        <a asp-action="Index">Cancelar</a>
     </form>
 </div>
