--- a/EnerSave/EnerSave/Views/TgastosEnergia/Details.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosEnergia/Details.cshtml
@@ -1,22 +1,22 @@
-﻿@model ConsultasMVC.dbenersave.TgastosEnergia
+﻿@model ConsultasMVC.Entities.GastosEnergiaEntity
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h2>Detalhes do Gastos de Energia</h2>
+<h2>Detalhes do Gastos de Luz</h2>
 
 <div>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Kilowatts(kWh):
+            Consumo(kWh)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Kilowatts)
+            @Html.DisplayFor(model => model.Kwh)
         </dd>
         <dt>
-            Valor(R$):
+            Valor
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Valor)
