--- a/EnerSave/EnerSave/Views/TgastosEnergia/Edit.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosEnergia/Edit.cshtml
@@ -1,10 +1,11 @@
-﻿@model ConsultasMVC.dbenersave.TgastosEnergia
+﻿@model ConsultasMVC.Entities.GastosEnergiaEntity
+
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h2>Atualização do gasto de energia</h2>
+<h2>Atualização do gasto de luz</h2>
 <h5>Informe os dados necessários abaixo para efetuar a atualização dos dados.</h5>
 
 <hr />
@@ -14,22 +15,22 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Kilowatts" class="control-label">Kilowatts(kWh)</label>
-                <input asp-for="Kilowatts" class="form-control" />
-                <span asp-validation-for="Kilowatts" class="text-danger"></span>
+                <label asp-for="Kwh" class="control-label"> Consumo(kWh)</label>
+                <input asp-for="Kwh" type="number" class="form-control" />
+                <span asp-validation-for="Kwh" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Valor" class="control-label">Valor(R$)</label>
-                <input asp-for="Valor" class="form-control" />
+                <label asp-for="Valor" class="control-label"> Valor</label>
+                <input asp-for="Valor" type="number" class="form-control" />
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Periodo" class="control-label">Período</label>
-                <input asp-for="Periodo" class="form-control" />
+                <input asp-for="Periodo" type="date" class="form-control" />
                 <span asp-validation-for="Periodo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UsuarioId" class="control-label"></label>
+                <label asp-for="UsuarioId" class="control-label">Usuário</label>
                 <select asp-for="UsuarioId" class="form-control" asp-items="ViewBag.UsuarioId"></select>
                 <span asp-validation-for="UsuarioId" class="text-danger"></span>
             </div>
