--- a/EnerSave/EnerSave/Views/TgastosEnergia/Index.cshtml
+++ b/EnerSave/EnerSave/Views/TgastosEnergia/Index.cshtml
@@ -1,29 +1,30 @@
-﻿@model IEnumerable<ConsultasMVC.dbenersave.TgastosEnergia>
+﻿@model IEnumerable<ConsultasMVC.Entities.GastosEnergiaEntity>
 
 @{
     ViewData["Title"] = "Index";
 }
 
 <h2>Gastos de Energia</h2>
-<h5>Abaixo são exibidos os gastos com energia cadastrados.</h5>
+<h5>Abaixo são exibidos os gastos com luz cadastrados.</h5>
+<hr />
 <br />
 
 <p>
     <a asp-action="Create">
-       <input type="submit" value="Novo Gasto de Energia" class="btn btn-default">
+        <input type="submit" value="Novo Gasto de Energia" class="btn btn-default">
     </a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                Kilowatts(kWh)
+                Total Consumo(kWh)
             </th>
             <th>
                 Valor(R$)
             </th>
             <th>
-                Período
+                Data de Leitura
             </th>
             <th>
                 Usuário
@@ -34,41 +35,40 @@
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Kilowatts)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Valor)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Periodo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario.Nome)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">
-                    <button type="button" class="btn btn-sm">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </button>
-                </a>
-                <a asp-action="Details" asp-route-id="@item.Id">
-                    <button type="button" class="btn btn-sm">
-                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                    </button>
-                </a>
-                <a asp-action="Delete" asp-route-id="@item.Id">
-                    <button type="button" class="btn btn-sm">
-                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                    </button>
-                </a>
-            </td>
-        </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Kwh)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Valor)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Periodo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Usuario.Nome)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </button>
+                    </a>
+                    <a asp-action="Details" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        </button>
+                    </a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        </button>
+                    </a>
+                </td>
+            </tr>
         }
     </tbody>
 </table>
-
 <a asp-action="Grafico">
     <button type="button" class="btn btn-sm">
         <span>Gráfico KWH</span>
