--- a/EnerSave/EnerSave/Views/Tusuarios/Index.cshtml
+++ b/EnerSave/EnerSave/Views/Tusuarios/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ConsultasMVC.dbenersave.Tusuarios>
+﻿@model IEnumerable<ConsultasMVC.Entities.UsuarioEntity>
 
 @{
     ViewData["Title"] = "Index";
@@ -10,7 +10,7 @@
 
 <p>
     <a asp-action="Create">
-       <input type="submit" value="Novo Usuário" class="btn btn-default">
+        <input type="submit" value="Novo Usuário" class="btn btn-default">
     </a>
 </p>
 <table class="table">
@@ -31,39 +31,41 @@
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Login)
-            </td>
-            <td>
-                @if (item.Administrador == 1){
-                    <span>Sim</span>
-                 }
-                else { 
-                    <span>Não</span>                
-                 }
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">
-                    <button type="button" class="btn btn-sm">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </button>
-                </a>
-                <a asp-action="Details" asp-route-id="@item.Id">
-                    <button type="button" class="btn btn-sm">
-                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                    </button>
-                </a>
-                <a asp-action="Delete" asp-route-id="@item.Id">
-                    <button type="button" class="btn btn-sm">
-                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                    </button>
-                </a>
-            </td>
-        </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Login)
+                </td>
+                <td>
+                    @if (item.Administrador == 1)
+                    {
+                        <span>Sim</span>
+                    }
+                    else
+                    {
+                        <span>Não</span>
+                    }
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </button>
+                    </a>
+                    <a asp-action="Details" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        </button>
+                    </a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">
+                        <button type="button" class="btn btn-sm">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        </button>
+                    </a>
+                </td>
+            </tr>
         }
     </tbody>
 </table>
