Novo gráfico de descarte de lixo; correção gráfico de energia; refinamentos no front-end

--- a/EnerSave/EnerSave/Views/Shared/_Layout.cshtml
+++ b/EnerSave/EnerSave/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         <li><a asp-area="" asp-controller="TgastosEnergia" asp-action="">Gastos Energia</a></li>
                         <li><a asp-area="" asp-controller="TdescarteLixo" asp-action="">Descarte Lixo</a></li>
                         <li><a asp-area="" asp-controller="Tusuarios" asp-action="">Usuários</a></li>
-                        <li><a asp-area="" asp-controller="Login" asp-action="Logout">Logout</a></li>
+                        <li><a asp-area="" asp-controller="Login" asp-action="Logout">Sair</a></li>
                     }
                     else
                     {
