--- a/EnerSave/EnerSave/Views/TdescarteLixo/Index.cshtml
+++ b/EnerSave/EnerSave/Views/TdescarteLixo/Index.cshtml
@@ -7,7 +7,6 @@
 <h2>Descarte de Lixo</h2>
 <h5>Abaixo são exibidos os descartes de lixo cadastrados.</h5>
 <hr />
-
 <br />
 
 <p>
@@ -31,10 +30,10 @@
                 Eletrônico
             </th>
             <th>
-                Observação
+                Data do Descarte
             </th>
             <th>
-                Período do descarte
+                Usuário
             </th>
             <th></th>
         </tr>
@@ -106,3 +105,8 @@
         }
     </tbody>
 </table>
+<a asp-action="Grafico">
+    <button type="button" class="btn btn-sm">
+        <span>Gráfico</span>
+    </button>
+</a>
